--- a/Atividade03/package.json
+++ b/Atividade03/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "atividade03",
-  "version": "1.0.0",
+  "name": "samuelprojeto",
+  "version": "1.2.6",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
